aggiornamento Javadoc (M. Martini)
git-svn-id: http://10.188.40.144:8080/TeleMedicina/Trunk/tlm-gtw/tlm-gtw-android-core@513132 f6862068-0fce-11de-802a-13e956f158ca